--- a/index.html
+++ b/index.html
@@ -3,130 +3,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rapchef - Home</title>
+    <title>RapChef - Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Rapchef</div>
-            <ul class="nav-links">
-                <li><a href="index.html" class="active">Home</a></li>
+    <header class="nav">
+        <div class="container nav__inner">
+            <a href="index.html" class="nav__logo">RapChef</a>
+            <button class="nav__toggle" id="mobileMenuToggle" aria-expanded="false" aria-controls="navLinks">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <ul class="nav__links" id="navLinks">
+                <li><a href="index.html" class="is-active">Home</a></li>
                 <li><a href="cardapio.html">Cardápio</a></li>
                 <li><a href="ajuda.html">Ajuda</a></li>
                 <li><a href="peca-sua-geladeira.html">Peça a sua geladeira</a></li>
             </ul>
-            <div class="mobile-menu-toggle" id="mobileMenuToggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
+        </div>
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Alimentação 24/7 em Comodato</h1>
-            <p>Geladeiras inteligentes com self-service completo, instaladas sem custos. Refeições caseiras prontas a qualquer hora, com pagamento integrado e variedade garantida.</p>
-        </section>
-
-        <section class="features">
-            <h2>Por que escolher a Rapchef?</h2>
-            <div class="features-grid">
-                <div class="feature-item">
-                    <h3>Disponibilidade Total</h3>
-                    <p>Disponibilidade 24 horas por dia, 7 dias por semana</p>
+        <section class="hero section">
+            <div class="container hero__grid">
+                <div class="hero__content">
+                    <span class="hero__eyebrow">Geladeiras Inteligentes</span>
+                    <h1 class="hero__title">Alimentação 24/7 em Comodato</h1>
+                    <p class="hero__subtitle">Geladeiras inteligentes com self-service completo, instaladas sem custos. Refeições caseiras prontas a qualquer hora, com pagamento integrado e variedade garantida.</p>
+                    <div class="hero__actions">
+                        <a href="https://wa.me/5511947223641" target="_blank" class="btn btn-primary">Entre em Contato</a>
+                        <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
+                    </div>
                 </div>
-                <div class="feature-item">
-                    <h3>Variedade</h3>
-                    <p>35 tipos de refeições caseiras diferentes</p>
-                </div>
-                <div class="feature-item">
-                    <h3>Qualidade Premium</h3>
-                    <p>Refeições sem conservantes e de extrema qualidade</p>
-                </div>
-                <div class="feature-item">
-                    <h3>Pagamento Flexível</h3>
-                    <p>Cartão, VR, VA e PIX</p>
+                <div class="hero__media">
+                    <div class="hero__media-card">
+                        <h3>Cuidado caseiro em cada prato</h3>
+                        <p>Refeições sem conservantes, produzidas com ingredientes frescos e reposição diária para garantir sabor, variedade e bem-estar.</p>
+                        <span class="hero__badge">35 tipos de refeições • 24h</span>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="benefits">
-            <h2>Benefícios para Todos</h2>
-            <div class="benefits-grid">
-                <div class="benefit-card">
-                    <h3>Para Moradores e Colaboradores</h3>
-                    <ul>
-                        <li>Acesso 24/7 a refeições de qualidade</li>
-                        <li>35 tipos de refeições diferentes</li>
-                        <li>Sem necessidade de aplicativos</li>
-                        <li>Pagamento flexível: Cartão, VR, VA e PIX</li>
-                    </ul>
-                </div>
-                <div class="benefit-card">
-                    <h3>Para Condomínios e Empresas</h3>
-                    <ul>
-                        <li>Instalação e manutenção com custo zero</li>
-                        <li>Segurança integrada</li>
-                        <li>Valorização do imóvel</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <section class="process">
-            <h2>Vamos Começar?</h2>
-            <div class="process-steps">
-                <div class="step">
-                    <div class="step-number">1</div>
-                    <p>Entre em contato para agendar uma conversa</p>
-                </div>
-                <div class="step">
-                    <div class="step-number">2</div>
-                    <p>Envio do Kit degustação</p>
-                </div>
-                <div class="step">
-                    <div class="step-number">3</div>
-                    <p>Proposta personalizada e fechamento do negócio</p>
-                </div>
-                <div class="step">
-                    <div class="step-number">4</div>
-                    <p>Instalação rápida e início da operação</p>
+        <section class="section">
+            <div class="container">
+                <h2 class="section__title">Por que escolher a RapChef?</h2>
+                <p class="section__subtitle">Tecnologia, praticidade e refeições artesanais que elevam a experiência dos seus colaboradores e moradores.</p>
+                <div class="features-grid">
+                    <article class="card feature-card">
+                        <h3>Disponibilidade Total</h3>
+                        <p>Disponibilidade 24 horas por dia, 7 dias por semana.</p>
+                    </article>
+                    <article class="card feature-card">
+                        <h3>Variedade</h3>
+                        <p>35 tipos de refeições caseiras diferentes.</p>
+                    </article>
+                    <article class="card feature-card">
+                        <h3>Qualidade Premium</h3>
+                        <p>Refeições sem conservantes e de extrema qualidade.</p>
+                    </article>
+                    <article class="card feature-card">
+                        <h3>Pagamento Flexível</h3>
+                        <p>Cartão, VR, VA e PIX.</p>
+                    </article>
                 </div>
             </div>
         </section>
 
-        <section class="cta">
-            <h2>Experimente nossas refeições e transforme seu espaço!</h2>
-            <p>Mais do que geladeiras inteligentes, oferecemos uma solução completa que agrega valor, gera receita e melhora a qualidade de vida de moradores e colaboradores.</p>
-            <div class="cta-buttons">
-                <a href="https://wa.me/5511947223641" target="_blank" class="btn-primary">Entre em Contato</a>
-                <a href="peca-sua-geladeira.html" class="btn-secondary">Peça sua Geladeira</a>
+        <section class="section">
+            <div class="container">
+                <h2 class="section__title">Benefícios para Todos</h2>
+                <p class="section__subtitle">Uma solução completa que conecta praticidade e gastronomia em empresas e condomínios.</p>
+                <div class="benefits-grid">
+                    <article class="card benefit-card">
+                        <h3>Para Moradores e Colaboradores</h3>
+                        <ul>
+                            <li>Acesso 24/7 a refeições de qualidade</li>
+                            <li>35 tipos de refeições diferentes</li>
+                            <li>Sem necessidade de aplicativos</li>
+                            <li>Pagamento flexível: Cartão, VR, VA e PIX</li>
+                        </ul>
+                    </article>
+                    <article class="card benefit-card">
+                        <h3>Para Condomínios e Empresas</h3>
+                        <ul>
+                            <li>Instalação e manutenção com custo zero</li>
+                            <li>Segurança integrada</li>
+                            <li>Valorização do imóvel</li>
+                        </ul>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section class="section process">
+            <div class="container">
+                <h2 class="section__title">Vamos Começar?</h2>
+                <p class="section__subtitle">Descubra como é simples transformar o seu espaço em um ponto de alimentação saudável e acessível.</p>
+                <div class="process-steps">
+                    <div class="process-step">
+                        <div class="process-step__number">1</div>
+                        <p>Entre em contato para agendar uma conversa.</p>
+                    </div>
+                    <div class="process-step">
+                        <div class="process-step__number">2</div>
+                        <p>Envio do Kit degustação.</p>
+                    </div>
+                    <div class="process-step">
+                        <div class="process-step__number">3</div>
+                        <p>Proposta personalizada e fechamento do negócio.</p>
+                    </div>
+                    <div class="process-step">
+                        <div class="process-step__number">4</div>
+                        <p>Instalação rápida e início da operação.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section">
+            <div class="container">
+                <div class="cta">
+                    <h2 class="section__title">Experimente nossas refeições e transforme seu espaço!</h2>
+                    <p class="cta__text">Mais do que geladeiras inteligentes, oferecemos uma solução completa que agrega valor, gera receita e melhora a qualidade de vida de moradores e colaboradores.</p>
+                    <div class="hero__actions">
+                        <a href="https://wa.me/5511947223641" target="_blank" class="btn btn-primary">Entre em Contato</a>
+                        <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Rapchef. Todos os direitos reservados.</p>
-            <div class="footer-contacts">
-                <a href="mailto:michael.mm@rapchef.com.br" class="footer-link">
-                    📧 michael.mm@rapchef.com.br
-                </a>
-                <a href="https://wa.me/5511947223641" target="_blank" class="footer-link">
-                    📱 +55 11 94723-641
-                </a>
+    <footer class="footer">
+        <div class="container footer__grid">
+            <div class="footer__brand">
+                <h3>RapChef</h3>
+                <p>Autonomia, sabor e cuidado em cada refeição para empresas e condomínios.</p>
+            </div>
+            <div class="footer__links">
+                <strong>Explore</strong>
+                <a href="index.html">Home</a>
+                <a href="cardapio.html">Cardápio</a>
+                <a href="ajuda.html">Ajuda</a>
+                <a href="peca-sua-geladeira.html">Peça a sua geladeira</a>
+            </div>
+            <div class="footer__links footer__contact">
+                <strong>Contato</strong>
+                <a href="mailto:michael.mm@rapchef.com.br">📧 michael.mm@rapchef.com.br</a>
+                <a href="https://wa.me/5511947223641" target="_blank">📱 +55 11 94722-3641</a>
+            </div>
+            <div class="footer__legal">
+                &copy; 2024 RapChef. Todos os direitos reservados.
             </div>
         </div>
     </footer>
+
     <script>
         const mobileMenuToggle = document.getElementById('mobileMenuToggle');
-        const navLinks = document.querySelector('nav .nav-links');
+        const navLinks = document.getElementById('navLinks');
 
         if (mobileMenuToggle && navLinks) {
             mobileMenuToggle.addEventListener('click', () => {
-                navLinks.classList.toggle('active');
+                const expanded = mobileMenuToggle.getAttribute('aria-expanded') === 'true';
+                mobileMenuToggle.setAttribute('aria-expanded', String(!expanded));
+                navLinks.classList.toggle('is-open');
             });
         }
     </script>
