--- a/ajuda.html
+++ b/ajuda.html
@@ -21,6 +21,7 @@
             <ul class="nav__links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cardapio.html">Cardápio</a></li>
+                <li><a href="estoque.html">Estoque</a></li>
                 <li><a href="ajuda.html" class="is-active">Ajuda</a></li>
                 <li><a href="peca-sua-geladeira.html">Peça a sua geladeira</a></li>
             </ul>
@@ -31,12 +32,11 @@
         <section class="section">
             <div class="container page-hero">
                 <div class="page-hero__inner">
-                    <h1 class="page-hero__title">Como Podemos Ajudar?</h1>
-                    <p class="page-hero__subtitle">Pernas frequentes, suporte rápido e informações úteis para aproveitar ao máximo a RapChef.</p>
+                    <h1 class="page-hero__title">Ajuda & Suporte</h1>
+                    <p class="page-hero__subtitle">Encontre respostas para suas dúvidas</p>
                 </div>
             </div>
         </section>
-
         <section class="section">
             <div class="container">
                 <h2 class="section__title">Perguntas Frequentes</h2>
@@ -69,7 +69,6 @@
                 </div>
             </div>
         </section>
-
         <section class="section section--compact">
             <div class="container">
                 <div class="card support-cta">
@@ -82,7 +81,6 @@
                 </div>
             </div>
         </section>
-
         <section class="section">
             <div class="container">
                 <div class="card form-card">
@@ -144,6 +142,7 @@
                 <strong>Explore</strong>
                 <a href="index.html">Home</a>
                 <a href="cardapio.html">Cardápio</a>
+                <a href="estoque.html">Estoque</a>
                 <a href="ajuda.html">Ajuda</a>
                 <a href="peca-sua-geladeira.html">Peça a sua geladeira</a>
             </div>
@@ -209,3 +208,6 @@
     </script>
 </body>
 </html>
+</body>
+</html></html>
+
