--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <ul class="nav__links" id="navLinks">
                 <li><a href="index.html" class="is-active">Home</a></li>
                 <li><a href="cardapio.html">Cardápio</a></li>
+                <li><a href="estoque.html">Estoque</a></li>
                 <li><a href="ajuda.html">Ajuda</a></li>
                 <li><a href="peca-sua-geladeira.html">Peça a sua geladeira</a></li>
             </ul>
@@ -149,6 +150,7 @@
                 <strong>Explore</strong>
                 <a href="index.html">Home</a>
                 <a href="cardapio.html">Cardápio</a>
+                <a href="estoque.html">Estoque</a>
                 <a href="ajuda.html">Ajuda</a>
                 <a href="peca-sua-geladeira.html">Peça a sua geladeira</a>
             </div>
