--- a/peca-sua-geladeira.html
+++ b/peca-sua-geladeira.html
@@ -21,6 +21,7 @@
             <ul class="nav__links" id="navLinks">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cardapio.html">Cardápio</a></li>
+                <li><a href="estoque.html">Estoque</a></li>
                 <li><a href="ajuda.html">Ajuda</a></li>
                 <li><a href="peca-sua-geladeira.html" class="is-active">Peça a sua geladeira</a></li>
             </ul>
@@ -36,7 +37,6 @@
                 </div>
             </div>
         </section>
-
         <section class="section">
             <div class="container request-grid">
                 <article class="card request-card">
@@ -50,7 +50,6 @@
                         <li>Segurança integrada.</li>
                     </ul>
                 </article>
-
                 <article class="card form-card">
                     <h2>Formulário de Solicitação</h2>
                     <form id="fridgeRequestForm" class="form">
@@ -96,7 +95,6 @@
                 </article>
             </div>
         </section>
-
         <section class="section section--compact">
             <div class="container">
                 <div class="contact-banner">
@@ -110,7 +108,6 @@
             </div>
         </section>
     </main>
-
     <footer class="footer">
         <div class="container footer__grid">
             <div class="footer__brand">
@@ -121,6 +118,7 @@
                 <strong>Explore</strong>
                 <a href="index.html">Home</a>
                 <a href="cardapio.html">Cardápio</a>
+                <a href="estoque.html">Estoque</a>
                 <a href="ajuda.html">Ajuda</a>
                 <a href="peca-sua-geladeira.html">Peça a sua geladeira</a>
             </div>
@@ -177,3 +175,7 @@
     </script>
 </body>
 </html>
+    </script>cript>
+</body>
+</html></html>
+
