--- a/ajuda.html
+++ b/ajuda.html
@@ -75,7 +75,7 @@
                     <h2 class="support-cta__title">Ainda tem dúvidas?</h2>
                     <p>Converse com nossa equipe para resolver qualquer questão rapidamente.</p>
                     <div class="support-cta__actions">
-                        <a href="https://wa.me/5511947223641" target="_blank" class="btn btn-primary">Falar no WhatsApp</a>
+                        <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Falar no WhatsApp</a>
                         <a href="mailto:michael.mm@rapchef.com.br" class="btn btn-ghost">Enviar E-mail</a>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
             <div class="footer__links footer__contact">
                 <strong>Contato</strong>
                 <a href="mailto:michael.mm@rapchef.com.br">📧 michael.mm@rapchef.com.br</a>
-                <a href="https://wa.me/5511947223641" target="_blank">📱 +55 11 94722-3641</a>
+                <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer">📱 +55 11 94722-3641</a>
             </div>
             <div class="footer__legal">
                 &copy; 2024 RapChef. Todos os direitos reservados.
