--- a/cardapio.html
+++ b/cardapio.html
@@ -93,7 +93,7 @@
             <div class="footer__links footer__contact">
                 <strong>Contato</strong>
                 <a href="mailto:michael.mm@rapchef.com.br">📧 michael.mm@rapchef.com.br</a>
-                <a href="https://wa.me/5511947223641" target="_blank">📱 +55 11 94722-3641</a>
+                <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer">📱 +55 11 94722-3641</a>
             </div>
             <div class="footer__legal">
                 &copy; 2024 RapChef. Todos os direitos reservados.
