--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1 class="hero__title">Alimentação 24/7 em Comodato</h1>
                     <p class="hero__subtitle">Geladeiras inteligentes com self-service completo, instaladas sem custos. Refeições caseiras prontas a qualquer hora, com pagamento integrado e variedade garantida.</p>
                     <div class="hero__actions">
-                        <a href="https://wa.me/5511947223641" target="_blank" class="btn btn-primary">Entre em Contato</a>
+                        <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Entre em Contato</a>
                         <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                     <h2 class="section__title">Experimente nossas refeições e transforme seu espaço!</h2>
                     <p class="cta__text">Mais do que geladeiras inteligentes, oferecemos uma solução completa que agrega valor, gera receita e melhora a qualidade de vida de moradores e colaboradores.</p>
                     <div class="hero__actions">
-                        <a href="https://wa.me/5511947223641" target="_blank" class="btn btn-primary">Entre em Contato</a>
+                        <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Entre em Contato</a>
                         <a href="peca-sua-geladeira.html" class="btn btn-ghost">Peça sua Geladeira</a>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
             <div class="footer__links footer__contact">
                 <strong>Contato</strong>
                 <a href="mailto:michael.mm@rapchef.com.br">📧 michael.mm@rapchef.com.br</a>
-                <a href="https://wa.me/5511947223641" target="_blank">📱 +55 11 94722-3641</a>
+                <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer">📱 +55 11 94722-3641</a>
             </div>
             <div class="footer__legal">
                 &copy; 2024 RapChef. Todos os direitos reservados.
