--- a/peca-sua-geladeira.html
+++ b/peca-sua-geladeira.html
@@ -101,7 +101,7 @@
                     <h2 class="section__title">Prefere falar diretamente?</h2>
                     <p>Entre em contato conosco agora mesmo e descubra como implementar a RapChef no seu espaço.</p>
                     <div class="contact-banner__actions">
-                        <a href="https://wa.me/5511947223641" target="_blank" class="btn btn-primary">WhatsApp</a>
+                        <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer" class="btn btn-primary">WhatsApp</a>
                         <a href="mailto:michael.mm@rapchef.com.br" class="btn btn-ghost">E-mail</a>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
             <div class="footer__links footer__contact">
                 <strong>Contato</strong>
                 <a href="mailto:michael.mm@rapchef.com.br">📧 michael.mm@rapchef.com.br</a>
-                <a href="https://wa.me/5511947223641" target="_blank">📱 +55 11 94722-3641</a>
+                <a href="https://wa.me/5511947223641" target="_blank" rel="noopener noreferrer">📱 +55 11 94722-3641</a>
             </div>
             <div class="footer__legal">
                 &copy; 2024 RapChef. Todos os direitos reservados.
