Solicitação de novos pratos

--- a/estoque.html
+++ b/estoque.html
@@ -127,6 +127,21 @@
                 </div>
             </div>
         </section>
+
+        <!-- WhatsApp CTA -->
+        <section class="section section--compact">
+            <div class="container">
+                <div class="estoque-cta card">
+                    <div class="estoque-cta__content">
+                        <div>
+                            <h3>Quer um prato específico?</h3>
+                            <p>Fale com a gente no WhatsApp e peça o seu agora.</p>
+                        </div>
+                        <button id="orderWhatsAppBtn" class="btn btn-primary">Pedir no WhatsApp</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
